Fix respacing PlusMinus
If there's lost in a row, like 1++++2, they should all be unary
operators on the 2 except for the first, like, 1 + +++2, not only the
rightmost one being a binary operator. Also, the binary operator to the
left will have padding, so no reason to have padding on a unary
operator.

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -98,10 +98,6 @@
     .inline-block;
   }
 
-  .unary-operator {
-    padding-left: @operator-padding;
-  }
-
   ////
   // ^, _
   // sup/sub
@@ -141,10 +137,6 @@
 
     .binary-operator {
       padding: 0 .1em;
-    }
-
-    .unary-operator {
-      padding-left: .1em;
     }
 
     // special styles for fractions
